[gd_scene load_steps=11 format=3 uid="uid://bb7jqijv0mgm3"]

[ext_resource type="Script" uid="uid://hwbm5s61v4og" path="res://main_menu.gd" id="1_uahxu"]
[ext_resource type="PackedScene" uid="uid://bp8nf0kd54ere" path="res://UI/nice_background_temp.tscn" id="2_y6s48"]
[ext_resource type="FontFile" uid="uid://bax2eejt2vao" path="res://BiemoyDemo-dr8AZ.ttf" id="3_otjfi"]
[ext_resource type="Texture2D" uid="uid://n82a5le1eigt" path="res://flower_complete.png" id="4_obtq6"]
[ext_resource type="Texture2D" uid="uid://tvhwgl6ecci1" path="res://bonecandy-sun.png" id="5_t4ff4"]

[sub_resource type="Theme" id="Theme_y6s48"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y6s48"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y6s48"]
bg_color = Color(0.279, 0.45, 0.33315, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 8
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_otjfi"]
bg_color = Color(0.264, 0.33, 0.2849, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 8
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kjwba"]
bg_color = Color(0.2436, 0.58, 0.350127, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 8
shadow_offset = Vector2(5, 5)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_y6s48")
script = ExtResource("1_uahxu")

[node name="NiceBackgroundTemp" parent="." instance=ExtResource("2_y6s48")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -116.0
offset_right = 165.0
offset_bottom = 184.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="StartGame" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_otjfi")
theme_override_font_sizes/font_size = 60
theme_override_styles/focus = SubResource("StyleBoxEmpty_y6s48")
theme_override_styles/hover = SubResource("StyleBoxFlat_y6s48")
theme_override_styles/pressed = SubResource("StyleBoxFlat_otjfi")
theme_override_styles/normal = SubResource("StyleBoxFlat_kjwba")
text = "Start Game"

[node name="Animals" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 1.47
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_otjfi")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_y6s48")
theme_override_styles/hover = SubResource("StyleBoxFlat_y6s48")
theme_override_styles/pressed = SubResource("StyleBoxFlat_otjfi")
theme_override_styles/normal = SubResource("StyleBoxFlat_kjwba")
text = "Animals"

[node name="Exit" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_otjfi")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_y6s48")
theme_override_styles/hover = SubResource("StyleBoxFlat_y6s48")
theme_override_styles/pressed = SubResource("StyleBoxFlat_otjfi")
theme_override_styles/normal = SubResource("StyleBoxFlat_kjwba")
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -416.0
offset_top = 40.0
offset_right = 440.0
offset_bottom = 168.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.096, 0.48, 0.2432, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 26
theme_override_fonts/font = ExtResource("3_otjfi")
theme_override_font_sizes/font_size = 96
text = "Nature Adventure"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Decorations" type="Node" parent="."]

[node name="FlowerComplete" type="Sprite2D" parent="Decorations"]
position = Vector2(120, 528)
scale = Vector2(2.23913, 2.23913)
texture = ExtResource("4_obtq6")

[node name="FlowerComplete2" type="Sprite2D" parent="Decorations"]
position = Vector2(282.688, 565.995)
scale = Vector2(1.54529, 1.54529)
texture = ExtResource("4_obtq6")

[node name="Bonecandy-sun" type="Sprite2D" parent="Decorations"]
z_index = -1
position = Vector2(960, 216)
scale = Vector2(0.191383, 0.191765)
texture = ExtResource("5_t4ff4")

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Animals" to="." method="_on_animals_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
